# ozone-dispmanx

./: BUILD.gn  README.md  client_native_pixmap_factory_dispmanx.cc  client_native_pixmap_factory_dispmanx.h  dispmanx_cursor.cc  dispmanx_cursor.h  dispmanx_display.cc  dispmanx_display.h  dispmanx_surface_factory.cc  dispmanx_surface_factory.h  dispmanx_window.cc  dispmanx_window.h  dispmanx_window_manager.cc  dispmanx_window_manager.h  ozone_platform_dispmanx.cc  ozone_platform_dispmanx.h
patches/: 0001-Enable-Ozone-platform-dispmanx.patch  0002-Force-to-enable-WebGL-on-Ozone-platform-dispmanx.patch  0003-Ugly-hack-to-pass-keydown-events-to-text-editing-ele.patch
tools/: args.gn  pack.sh
